    mode, or stretch to fill the entire screen.

  * Added configurable 'Overscan' option for fullscreen modes.

  * Fullscreen TIA modes no longer assume that desktop taskbars, etc
    are present, hence they are scaled to the proper fullscreen size.

  * Added option to display dialogs in screen corners.

  * Added hotkey for sound on/off.

  * Paths have been simplified (TODO: doc)

  * Enhanced 'Command' menu to display current state and more commands.

  * Added option to save and load all TimeMachine states at once.

  * Added option to change pitch of Pitfall II music.

  * In file listings, you can now select directories by holding 'Shift' on
    the first character entered.  Entering characters in lowercase still
    selects files, as before.

  * Fixed bug when starting ROMs via MacOS finder.

  * Added various developer options for oddball TIAs:
    - stuffed player, missiles and ball move
    - delayed playfield bits and color
    - delayed players and ball VDEL swap

  * Disabled some developer options for 'Player settings'.

  * Improved breakpoints to now consider the banks.

  * Improved debugger's TIA display and zoom windows.

  * Improved hotkeys, now many emulation keys work in debugger too.

  * Fixed display of negative values in debugger; sometimes they were
    shown as positive.

  * Reworked ROM properties database, making it load faster in certain
    cases.  Related to this, completely removed 'Display_Height' stuff.
    (TODO: Stella.pro cleanup, doc).

  * Updated internal ROM properties database to ROM-Hunter version 15
    (thanks go to RomHunter for his tireless research in this area).
    Related to this, updated the snapshot collection.

  * Fixed 'Dancing Plate (Unknown) (PAL)' to use joystick.

  * Fixed cheatcode handling in 2K and 4K ROMs.

  * Fixed bug where frying one ROM was continued with the next ROM.

  * Fixed not working 7800 pause key.

  * Enhanced UA bankswitching to support certain Brazilian carts.
